5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1747_3096.log
== TEST (2019-05-16 10:28:26) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:16) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
	if (pc >= 1):
		pc = 11 - pc
	
	
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:27) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
	if (pc == 1):
		pc = 20
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:31) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
	if (pc == 1):
		pc = 20
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:33) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
	if (pc == 1):
		pc = 20
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:46) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
if (pc == 1):
	pc = 20
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:49) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
if (pc == 1):
	pc = 20
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:51) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
if (pc == 1):
	pc = 20
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:42:53) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
if (pc == 1):
	pc == 20
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:43:55) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma 20 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- ERROR:
File "XXXX", line 8
    soma = soma 20 - pc
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:44:05) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma = 20 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:44:08) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma + 20 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:44:15) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma + 20 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:44:18) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma + 20 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:10) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma + 11 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:45:16) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma + 11 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- EXECUTION TIME:
0.227936
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
55
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
124
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
-58
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:17) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma + 11 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:18) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma + 11 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:21) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma + 11 - pc
	i = i + 1
	pc = int(input("Determine pc: "))

print(soma)	
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:25) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma 
	i = i + 1
	pc = int(input("Determine pc: "))
	
	if (pc == 1):
		soma = soma + 20
	elif (pc == 2):
		soma = soma + 15
	elif (pc == 3):
		soma = soma + 10
	elif (pc >= 4 and <= 10):
		soma = 11 - pc
print (soma)
-- ERROR:
File "XXXX", line 18
    elif (pc >= 4 and <= 10):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:49) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma 
	i = i + 1
	pc = int(input("Determine pc: "))
	
	if (pc == 1):
		soma = soma + 20
	elif (pc == 2):
		soma = soma + 15
	elif (pc == 3):
		soma = soma + 10
	elif (pc >= 4 or <= 10):
		soma = 11 - pc
print (soma)
-- ERROR:
File "XXXX", line 18
    elif (pc >= 4 or <= 10):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:32) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma 
	i = i + 1
	pc = int(input("Determine pc: "))
	
if (pc == 1):
	soma = soma + 20
elif (pc == 2):
		soma = soma + 15
elif (pc == 3):
	soma = soma + 10
elif (pc>=4 or<=10):
	soma = 11 - pc

print(soma)
-- ERROR:
File "XXXX", line 18
    elif (pc>=4 or<=10):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:40) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma 
	i = i + 1
	pc = int(input("Determine pc: "))
	
if (pc == 1):
	soma = soma + 20
elif (pc == 2):
		soma = soma + 15
elif (pc == 3):
	soma = soma + 10
elif (pc>=4 or <=10):
	soma = 11 - pc

print(soma)
-- ERROR:
File "XXXX", line 18
    elif (pc>=4 or <=10):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:48) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma 
	i = i + 1
	pc = int(input("Determine pc: "))
	
if (pc == 1):
	soma = soma + 20
elif (pc == 2):
		soma = soma + 15
elif (pc == 3):
	soma = soma + 10
elif (pc>=4 or <10):
	soma = 11 - pc

print(soma)
-- ERROR:
File "XXXX", line 18
    elif (pc>=4 or <10):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:04) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma 
	i = i + 1
	pc = int(input("Determine pc: "))
	
if (pc == 1):
	soma = soma + 20
elif (pc == 2):
		soma = soma + 15
elif (pc == 3):
	soma = soma + 10
elif (pc >= 4 or pc <= 10):
	soma = 11 - pc

print(soma)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:28) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	soma = soma 
	i = i + 1
	pc = int(input("Determine pc: "))
	
	if (pc == 1):
		soma = soma + 20
	elif (pc == 2):
			soma = soma + 15
	elif (pc == 3):
		soma = soma + 10
	elif (pc >= 4 or pc <= 10):
		soma = 11 - pc

print(soma)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:55) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
i = 0
soma = 0
# Laco
while (pc != 0):
	i = i + 1
	pc = int(input("Determine pc: "))
	
	if (pc == 1):
		soma = soma + 20
	elif (pc == 2):
			soma = soma + 15
	elif (pc == 3):
		soma = soma + 10
	elif (pc >= 4 or pc <= 10):
		soma = 11 - pc

print(soma)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:53:12) 
-- CODE:
# Entradas
pc = int(input("Determine pc: "))
# Variaveis
soma = 0
# Laco
while (pc != 0):
	pc = int(input("Determine pc: "))
	
	if (pc == 1):
		soma = soma + 20
	elif (pc == 2):
			soma = soma + 15
	elif (pc == 3):
		soma = soma + 10
	elif (pc >= 4 or pc <= 10):
		soma = 11 - pc

print(soma)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
